--- a/index.html
+++ b/index.html
@@ -5,34 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css" type="text/css" />
-    <script type="text/javascript" src="main.js"></script>
     <title>2048</title>
 </head>
 <body>
-    <div id="test2048">
-        <div id='header'>
-            <h1>2048</h1>
-            <a href='javascript:newgame()'>开始新游戏</a>
-            <p>分数：<span id='score'>0</span></p>
-        </div>
-    <div id="container">
-    <div class="cell" id="cell-0-0"></div>
-    <div class="cell" id="cell-0-1"></div>
-    <div class="cell" id="cell-0-2"></div>
-    <div class="cell" id="cell-0-3"></div>
-    <div class="cell" id="cell-1-0"></div>
-    <div class="cell" id="cell-1-1"></div>
-    <div class="cell" id="cell-1-2"></div>
-    <div class="cell" id="cell-1-3"></div>
-    <div class="cell" id="cell-2-0"></div>
-    <div class="cell" id="cell-2-1"></div>
-    <div class="cell" id="cell-2-2"></div>
-    <div class="cell" id="cell-2-3"></div>
-    <div class="cell" id="cell-3-0"></div>
-    <div class="cell" id="cell-3-1"></div>
-    <div class="cell" id="cell-3-2"></div>
-    <div class="cell" id="cell-3-3"></div>    
+   <!-- 标题 -->
+   <header>
+       <h1>2048</h1>
+       <a href="javascript:new_game();" id="new_game_button">New Game</a>
+       <p>score:<span id="score">0</span></p>
+   </header>
+   <!-- 绘制棋盘 -->
+    <div id="gird_container">
+    <div class="gird_cell" id="gird_cell_0_0"></div>
+    <div class="gird_cell" id="gird_cell_0_1"></div>
+    <div class="gird_cell" id="gird_cell_0_2"></div>
+    <div class="gird_cell" id="gird_cell_0_3"></div>
+
+    <div class="gird_cell" id="gird_cell_1_0"></div>
+    <div class="gird_cell" id="gird_cell_1_1"></div>
+    <div class="gird_cell" id="gird_cell_1_2"></div>
+    <div class="gird_cell" id="gird_cell_1_3"></div>
+    
+    <div class="gird_cell" id="gird_cell_2_0"></div>
+    <div class="gird_cell" id="gird_cell_2_1"></div>
+    <div class="gird_cell" id="gird_cell_2_2"></div>
+    <div class="gird_cell" id="gird_cell_2_3"></div>
+    
+    <div class="gird_cell" id="gird_cell_3_0"></div>
+    <div class="gird_cell" id="gird_cell_3_1"></div>
+    <div class="gird_cell" id="gird_cell_3_2"></div>
+    <div class="gird_cell" id="gird_cell_3_3"></div>    
     </div>    
     </div>
+    <script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="support.js"></script>
 </body>
 </html>
