--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     <div class="gird_cell" id="gird_cell_3_3"></div>    
     </div>    
     </div>
-    <script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="support.js"></script>
+    <script type="text/javascript" src="showanimation.js"></script>
 </body>
 </html>
